--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,5 +7,6 @@ author: Andres Araujo a.araujo.azua@gmail.com
 
 dependencies:
   logging: any
+  ansicolor: ">=0.0.9 <0.1.0"
 dev_dependencies:
   unittest: any
