--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ author: Andres Araujo a.araujo.azua@gmail.com
 #homepage: https://www.example.com
 
 dependencies:
-  logging: any
+  logging: ">=0.9.3 <0.10.0"
   ansicolor: ">=0.0.9 <0.1.0"
 dev_dependencies:
   unittest: any
